# system

./: .gitignore  README.md
assets/: system.blend
config/: setup.sh
config/alacritty/: README.md  alacritty.toml  alacritty.yml
config/clangd/: config.yaml
config/contour/: README.md  contour.yml
config/fd/: README.md
config/flameshot/: README.md  flameshot.ini
config/git/: .gitconfig  gitignore
config/lf/: README.md  icons  lfrc  preview
config/pcmanfm/: README.md
config/pcmanfm/default/: pcmanfm.conf
config/picom/: README.md  picom  picom.conf
config/rofi/: README.md  config.rasi  theme.rasi
config/rofi/scripts/: confirm.sh  open.sh  powermenu.sh
config/starship/: README.md  starship.toml
config/tmux/: README.md  modalCommands.conf  modalKeybindings.conf  tmux.conf
config/vimiv/: README.md
config/xprofile/: README.md  xprofile
config/zathura/: README.md
config/zsh/: .zcompdump  README.md  aliasrc  zsh  zshrc
setup/: setup.sh
sis/sisAuth/: CMakeLists.txt  README.md  libBuild.sh
sis/sisAuth/source/: sisAuth.cpp
sis/sisAuth/source/include/: sisAuth.hpp
sis/sisCall/: CMakeLists.txt  run.sh
sis/sisCall/source/: main.cpp  sisCall.cpp
sis/sisCall/source/include/: sisAuth  sisCall.hpp  sisIO  sisPower
sis/sisIO/: CMakeLists.txt  README.md  libBuild.sh  run.sh
sis/sisIO/source/: sisIO.cpp
sis/sisIO/source/include/: sisIO.hpp
sis/sisPower/: CMakeLists.txt  libBuild.sh
sis/sisPower/source/: sisPower.cpp
sis/sisPower/source/include/: sisPower.hpp
